--- a/oppg1.ipynb
+++ b/oppg1.ipynb
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "e2f2d7aa-9ea4-4a61-a367-99de1e9bab75",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-06T10:27:52.774949936Z",
-     "start_time": "2023-11-06T10:27:52.737543054Z"
+     "end_time": "2023-11-06T10:32:01.643023938Z",
+     "start_time": "2023-11-06T10:32:01.541237877Z"
     }
    },
    "outputs": [
@@ -64,7 +64,7 @@
       "text/plain": "     Item_Number                       Set_Name             Theme  Pieces  \\\n0          41916          Extra Dots - Series 2              DOTS   109.0   \n1          41908          Extra Dots - Series 1              DOTS   109.0   \n2          11006           Creative Blue Bricks           Classic    52.0   \n3          11007          Creative Green Bricks           Classic    60.0   \n4          41901         Funky Animals Bracelet              DOTS    33.0   \n...          ...                            ...               ...     ...   \n1299       45678                SPIKE Prime Set    LEGO Education   528.0   \n1300       71367          Mario's House & Yoshi  LEGO Super Mario   205.0   \n1301       71368           Toad's Treasure Hunt  LEGO Super Mario   464.0   \n1302       71369    Bowser's Castle Boss Battle  LEGO Super Mario  1010.0   \n1303       71371  Propeller Mario Power-Up Pack  LEGO Super Mario    13.0   \n\n        Price Amazon_Price    Year      Ages  Pages  Minifigures  Packaging  \\\n0       3.99        $3.44   2020.0   Ages_6+    NaN          NaN  Foil pack   \n1       3.99        $3.99   2020.0   Ages_6+    NaN          NaN  Foil pack   \n2       4.99        $4.93   2020.0   Ages_4+   37.0          NaN        Box   \n3       4.99        $4.93   2020.0   Ages_4+   37.0          NaN        Box   \n4       4.99        $4.99   2020.0   Ages_6+    NaN          NaN  Foil pack   \n...       ...          ...     ...       ...    ...          ...        ...   \n1299  329.95           NaN  2020.0  Ages_10+    NaN          2.0        NaN   \n1300   29.99           NaN  2020.0   Ages_6+    NaN          2.0        Box   \n1301   69.99           NaN  2020.0   Ages_8+    NaN          4.0        Box   \n1302   99.99           NaN  2020.0   Ages_8+    NaN          NaN        Box   \n1303    9.99           NaN  2020.0   Ages_6+    NaN          NaN        Box   \n\n     Weight  Unique_Pieces Availability   Size  \n0       NaN            6.0       Retail  Small  \n1       NaN            6.0       Retail  Small  \n2       NaN           28.0       Retail  Small  \n3       NaN           36.0       Retail  Small  \n4       NaN           10.0       Retail  Small  \n...     ...            ...          ...    ...  \n1299    NaN          108.0          NaN  Small  \n1300    NaN          114.0       Retail  Small  \n1301    NaN          195.0       Retail  Small  \n1302    NaN          346.0       Retail  Small  \n1303    NaN           11.0       Retail  Small  \n\n[1140 rows x 15 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Item_Number</th>\n      <th>Set_Name</th>\n      <th>Theme</th>\n      <th>Pieces</th>\n      <th>Price</th>\n      <th>Amazon_Price</th>\n      <th>Year</th>\n      <th>Ages</th>\n      <th>Pages</th>\n      <th>Minifigures</th>\n      <th>Packaging</th>\n      <th>Weight</th>\n      <th>Unique_Pieces</th>\n      <th>Availability</th>\n      <th>Size</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>41916</td>\n      <td>Extra Dots - Series 2</td>\n      <td>DOTS</td>\n      <td>109.0</td>\n      <td>3.99</td>\n      <td>$3.44</td>\n      <td>2020.0</td>\n      <td>Ages_6+</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Foil pack</td>\n      <td>NaN</td>\n      <td>6.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>41908</td>\n      <td>Extra Dots - Series 1</td>\n      <td>DOTS</td>\n      <td>109.0</td>\n      <td>3.99</td>\n      <td>$3.99</td>\n      <td>2020.0</td>\n      <td>Ages_6+</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Foil pack</td>\n      <td>NaN</td>\n      <td>6.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>11006</td>\n      <td>Creative Blue Bricks</td>\n      <td>Classic</td>\n      <td>52.0</td>\n      <td>4.99</td>\n      <td>$4.93</td>\n      <td>2020.0</td>\n      <td>Ages_4+</td>\n      <td>37.0</td>\n      <td>NaN</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>28.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11007</td>\n      <td>Creative Green Bricks</td>\n      <td>Classic</td>\n      <td>60.0</td>\n      <td>4.99</td>\n      <td>$4.93</td>\n      <td>2020.0</td>\n      <td>Ages_4+</td>\n      <td>37.0</td>\n      <td>NaN</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>36.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>41901</td>\n      <td>Funky Animals Bracelet</td>\n      <td>DOTS</td>\n      <td>33.0</td>\n      <td>4.99</td>\n      <td>$4.99</td>\n      <td>2020.0</td>\n      <td>Ages_6+</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Foil pack</td>\n      <td>NaN</td>\n      <td>10.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1299</th>\n      <td>45678</td>\n      <td>SPIKE Prime Set</td>\n      <td>LEGO Education</td>\n      <td>528.0</td>\n      <td>329.95</td>\n      <td>NaN</td>\n      <td>2020.0</td>\n      <td>Ages_10+</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>108.0</td>\n      <td>NaN</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>1300</th>\n      <td>71367</td>\n      <td>Mario's House &amp; Yoshi</td>\n      <td>LEGO Super Mario</td>\n      <td>205.0</td>\n      <td>29.99</td>\n      <td>NaN</td>\n      <td>2020.0</td>\n      <td>Ages_6+</td>\n      <td>NaN</td>\n      <td>2.0</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>114.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>1301</th>\n      <td>71368</td>\n      <td>Toad's Treasure Hunt</td>\n      <td>LEGO Super Mario</td>\n      <td>464.0</td>\n      <td>69.99</td>\n      <td>NaN</td>\n      <td>2020.0</td>\n      <td>Ages_8+</td>\n      <td>NaN</td>\n      <td>4.0</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>195.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>1302</th>\n      <td>71369</td>\n      <td>Bowser's Castle Boss Battle</td>\n      <td>LEGO Super Mario</td>\n      <td>1010.0</td>\n      <td>99.99</td>\n      <td>NaN</td>\n      <td>2020.0</td>\n      <td>Ages_8+</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>346.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n    <tr>\n      <th>1303</th>\n      <td>71371</td>\n      <td>Propeller Mario Power-Up Pack</td>\n      <td>LEGO Super Mario</td>\n      <td>13.0</td>\n      <td>9.99</td>\n      <td>NaN</td>\n      <td>2020.0</td>\n      <td>Ages_6+</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Box</td>\n      <td>NaN</td>\n      <td>11.0</td>\n      <td>Retail</td>\n      <td>Small</td>\n    </tr>\n  </tbody>\n</table>\n<p>1140 rows × 15 columns</p>\n</div>"
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "dfb7f59b-5291-46f5-b6e0-3bd48146358f",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-11-06T10:28:13.919790077Z",
-     "start_time": "2023-11-06T10:28:13.898495419Z"
+     "end_time": "2023-11-06T10:32:02.497260154Z",
+     "start_time": "2023-11-06T10:32:02.487165253Z"
     }
    },
    "outputs": [
@@ -100,7 +100,7 @@
       "text/plain": "                 Theme  Pieces  Pages      Ages\n2              Classic    52.0   37.0   Ages_4+\n3              Classic    60.0   37.0   Ages_4+\n13             Friends    95.0   40.0   Ages_6+\n14             Classic     1.0    1.0   Ages_4+\n16              Disney    69.0   28.0   Ages_4+\n...                ...     ...    ...       ...\n1173  THE LEGO MOVIE 2  3178.0  452.0  Ages_16+\n1174    Jurassic World  3120.0  464.0  Ages_16+\n1175        Monkie Kid  1105.0  556.0  Ages_10+\n1176             Ideas  3662.0  564.0  Ages_18+\n1177           Technic  3696.0  657.0  Ages_18+\n\n[1027 rows x 4 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Theme</th>\n      <th>Pieces</th>\n      <th>Pages</th>\n      <th>Ages</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>Classic</td>\n      <td>52.0</td>\n      <td>37.0</td>\n      <td>Ages_4+</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Classic</td>\n      <td>60.0</td>\n      <td>37.0</td>\n      <td>Ages_4+</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Friends</td>\n      <td>95.0</td>\n      <td>40.0</td>\n      <td>Ages_6+</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>Classic</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>Ages_4+</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Disney</td>\n      <td>69.0</td>\n      <td>28.0</td>\n      <td>Ages_4+</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1173</th>\n      <td>THE LEGO MOVIE 2</td>\n      <td>3178.0</td>\n      <td>452.0</td>\n      <td>Ages_16+</td>\n    </tr>\n    <tr>\n      <th>1174</th>\n      <td>Jurassic World</td>\n      <td>3120.0</td>\n      <td>464.0</td>\n      <td>Ages_16+</td>\n    </tr>\n    <tr>\n      <th>1175</th>\n      <td>Monkie Kid</td>\n      <td>1105.0</td>\n      <td>556.0</td>\n      <td>Ages_10+</td>\n    </tr>\n    <tr>\n      <th>1176</th>\n      <td>Ideas</td>\n      <td>3662.0</td>\n      <td>564.0</td>\n      <td>Ages_18+</td>\n    </tr>\n    <tr>\n      <th>1177</th>\n      <td>Technic</td>\n      <td>3696.0</td>\n      <td>657.0</td>\n      <td>Ages_18+</td>\n    </tr>\n  </tbody>\n</table>\n<p>1027 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,8 +117,6 @@
     "# gjør themes om til string og fjern alle tegn vi ikke vil ha med\n",
     "#df2['Theme'] = df2['Theme'].astype(str)\n",
     "#df2['Theme'] = df2['Theme'].str.replace(r'[^a-zA-Z0-9\\s-]', '', regex = True)\n",
-    " \n",
-    "\n",
     " \n",
     " \n",
     "# fjerner dollartegn og trademark-tegn fra datasettet\n",
@@ -144,12 +142,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "b7277ac7-b3e9-41f8-91d0-3398955ed196",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-06T10:06:06.339942281Z",
-     "start_time": "2023-11-06T10:06:06.252826325Z"
+     "end_time": "2023-11-06T10:32:19.104387455Z",
+     "start_time": "2023-11-06T10:32:19.084796927Z"
     }
    },
    "outputs": [
@@ -157,8 +155,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pieces    428.304082\n",
-      "Pages     104.228571\n",
+      "Pieces    421.265823\n",
+      "Pages     102.107108\n",
       "dtype: float64\n"
      ]
     }
@@ -169,34 +167,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "fdbb41c9-8461-4c74-ad4c-f229be31b3d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-11-06T10:06:07.126763346Z",
-     "start_time": "2023-11-06T10:06:07.063611665Z"
+     "end_time": "2023-11-06T10:32:21.107244764Z",
+     "start_time": "2023-11-06T10:32:21.101117692Z"
     }
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Theme'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "File \u001B[0;32m~/programming/ISTT1003-ProjectAssignment-02/lib/python3.11/site-packages/pandas/core/indexes/base.py:3790\u001B[0m, in \u001B[0;36mIndex.get_loc\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3789\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 3790\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_engine\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_loc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcasted_key\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   3791\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m err:\n",
-      "File \u001B[0;32mindex.pyx:152\u001B[0m, in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32mindex.pyx:181\u001B[0m, in \u001B[0;36mpandas._libs.index.IndexEngine.get_loc\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001B[0m, in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[0;34m()\u001B[0m\n",
-      "File \u001B[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001B[0m, in \u001B[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001B[0;34m()\u001B[0m\n",
-      "\u001B[0;31mKeyError\u001B[0m: 'Theme'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001B[0;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[14], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28mprint\u001B[39m(\u001B[43mdf2\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mTheme\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241m.\u001B[39mvalue_counts())\n",
-      "File \u001B[0;32m~/programming/ISTT1003-ProjectAssignment-02/lib/python3.11/site-packages/pandas/core/frame.py:3893\u001B[0m, in \u001B[0;36mDataFrame.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3891\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcolumns\u001B[38;5;241m.\u001B[39mnlevels \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m   3892\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_getitem_multilevel(key)\n\u001B[0;32m-> 3893\u001B[0m indexer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcolumns\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_loc\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   3894\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m is_integer(indexer):\n\u001B[1;32m   3895\u001B[0m     indexer \u001B[38;5;241m=\u001B[39m [indexer]\n",
-      "File \u001B[0;32m~/programming/ISTT1003-ProjectAssignment-02/lib/python3.11/site-packages/pandas/core/indexes/base.py:3797\u001B[0m, in \u001B[0;36mIndex.get_loc\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   3792\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(casted_key, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;129;01mor\u001B[39;00m (\n\u001B[1;32m   3793\u001B[0m         \u001B[38;5;28misinstance\u001B[39m(casted_key, abc\u001B[38;5;241m.\u001B[39mIterable)\n\u001B[1;32m   3794\u001B[0m         \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28many\u001B[39m(\u001B[38;5;28misinstance\u001B[39m(x, \u001B[38;5;28mslice\u001B[39m) \u001B[38;5;28;01mfor\u001B[39;00m x \u001B[38;5;129;01min\u001B[39;00m casted_key)\n\u001B[1;32m   3795\u001B[0m     ):\n\u001B[1;32m   3796\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m InvalidIndexError(key)\n\u001B[0;32m-> 3797\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(key) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01merr\u001B[39;00m\n\u001B[1;32m   3798\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mTypeError\u001B[39;00m:\n\u001B[1;32m   3799\u001B[0m     \u001B[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001B[39;00m\n\u001B[1;32m   3800\u001B[0m     \u001B[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001B[39;00m\n\u001B[1;32m   3801\u001B[0m     \u001B[38;5;66;03m#  the TypeError.\u001B[39;00m\n\u001B[1;32m   3802\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_check_indexing_error(key)\n",
-      "\u001B[0;31mKeyError\u001B[0m: 'Theme'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Theme\n",
+      "nan                  125\n",
+      "Star Wars            114\n",
+      "Friends              102\n",
+      "City                  95\n",
+      "NINJAGO               78\n",
+      "Marvel                50\n",
+      "Disney                43\n",
+      "BrickHeadz            40\n",
+      "Creator 3-in-1        38\n",
+      "Technic               38\n",
+      "THE LEGO MOVIE 2      28\n",
+      "Minecraft             26\n",
+      "Harry Potter          24\n",
+      "Jurassic World        20\n",
+      "Classic               20\n",
+      "Hidden Side           19\n",
+      "Speed Champions       17\n",
+      "Batman                16\n",
+      "Creator Expert        15\n",
+      "Juniors               12\n",
+      "Ideas                 12\n",
+      "Architecture          11\n",
+      "DC                    11\n",
+      "Monkie Kid             9\n",
+      "Trolls World Tour      9\n",
+      "Minifigures            8\n",
+      "LEGO Frozen 2          8\n",
+      "Overwatch              8\n",
+      "Unikitty               8\n",
+      "DOTS                   8\n",
+      "Powered UP             4\n",
+      "Xtra                   4\n",
+      "Powerpuff Girls        2\n",
+      "Minions                2\n",
+      "Spider-Man             2\n",
+      "Stranger Things        1\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
