--- a/oppg1.ipynb
+++ b/oppg1.ipynb
@@ -73,7 +73,7 @@
     "df = pd.read_csv(\"lego.population.csv\", sep = \",\", encoding = \"latin1\")\n",
     "import pandas as pd\n",
     "\n",
-    "# Clean the 'Theme' column\n",
+    "# Clean the 'Theme' column, remove special characters\n",
     "df['Theme'] = df['Theme'].astype(str)\n",
     "df['Theme'] = df['Theme'].str.replace(r'[^a-zA-Z0-9\\s-]', '', regex=True)\n",
     "\n",
@@ -101,13 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "dfb7f59b-5291-46f5-b6e0-3bd48146358f",
    "metadata": {
     "tags": [],
     "ExecuteTime": {
-     "end_time": "2023-11-07T09:33:38.887733354Z",
-     "start_time": "2023-11-07T09:33:38.825944391Z"
+     "end_time": "2023-11-07T10:13:04.159399808Z",
+     "start_time": "2023-11-07T10:13:04.096131122Z"
     }
    },
    "outputs": [
@@ -116,24 +116,17 @@
       "text/plain": "      Pieces  Pages  Ages\n2       52.0   37.0     4\n3       60.0   37.0     4\n13      95.0   40.0     6\n14       1.0    1.0     4\n16      69.0   28.0     4\n...      ...    ...   ...\n1173  3178.0  452.0    16\n1174  3120.0  464.0    16\n1175  1105.0  556.0    10\n1176  3662.0  564.0    18\n1177  3696.0  657.0    18\n\n[741 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Pieces</th>\n      <th>Pages</th>\n      <th>Ages</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>52.0</td>\n      <td>37.0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>60.0</td>\n      <td>37.0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>95.0</td>\n      <td>40.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>69.0</td>\n      <td>28.0</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1173</th>\n      <td>3178.0</td>\n      <td>452.0</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>1174</th>\n      <td>3120.0</td>\n      <td>464.0</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>1175</th>\n      <td>1105.0</td>\n      <td>556.0</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>1176</th>\n      <td>3662.0</td>\n      <td>564.0</td>\n      <td>18</td>\n    </tr>\n    <tr>\n      <th>1177</th>\n      <td>3696.0</td>\n      <td>657.0</td>\n      <td>18</td>\n    </tr>\n  </tbody>\n</table>\n<p>741 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# fjerner forklaringsvariabler vi ikke trenger\n",
     "df2 = df[['Pieces', 'Pages', 'Ages']]\n",
     "\n",
     "# fjerner observasjoner med manglende datapunkter\n",
     "df2 = df2.dropna()\n",
-    "\n",
-    "# gjør themes om til string og fjern alle tegn vi ikke vil ha med\n",
-    "#df2['Theme'] = df2['Theme'].astype(str)\n",
-    "#df2['Theme'] = df2['Theme'].str.replace(r'[^a-zA-Z0-9\\s-]', '', regex = True)\n",
-    "\n",
     " \n",
     "# fjerner dollartegn og trademark-tegn fra datasettet\n",
     "#df2['Price'] = df2['Price'].str.replace('\\$', '', regex = True)\n",
@@ -142,8 +135,6 @@
     "#df2['Price'] = df2['Price'].astype(float)\n",
     "\n",
     "#df2[df2['Theme'] != 'DUPLO']\n",
-    "df2['Ages'].astype(int)\n",
-    "df2['Ages'].astype(float)\n",
     "\n",
     "\n",
     "df2"
