Code cleanup and comments.

--- a/oppg1.ipynb
+++ b/oppg1.ipynb
@@ -87,13 +87,17 @@
     "df = df[df['Ages'] != 'Ages_NA']\n",
     "df = df[df['Ages'] != 'NaN']\n",
     "\n",
-    "\n",
-    "df['Ages'] = df['Ages'].str.strip()  # Remove any leading/trailing whitespace\n",
+    "# Remove any leading/trailing whitespace from \"Ages\", and then remove 1 1/2 from Ages\n",
+    "df['Ages'] = df['Ages'].str.strip()\n",
     "df = df[df['Ages'] != 'Ages_1½']  \n",
     "\n",
-    "\n",
+    "# Trim Ages enstries to only keep numbers\n",
     "df['Ages'] = df['Ages'].str.replace('Ages_', '').str.replace('+', '').str.replace('-.*', '')\n",
+    "\n",
+    "# Convert age strings to int\n",
     "df['Ages'] = pd.to_numeric(df['Ages'], errors='coerce').fillna(0).astype(int)\n",
+    "\n",
+    "# Drop every age less than 3 years old\n",
     "df = df[df['Ages'] > 3]\n",
     "\n",
     "df"
