Code cleanup and comments.

--- a/oppg1.ipynb
+++ b/oppg1.ipynb
@@ -80,10 +80,10 @@
     "# Clean the 'Price' column\n",
     "df['Price'] = df['Price'].str.replace('\\$', '', regex = True)\n",
     "\n",
-    "# Filter out rows where 'Theme' is 'DUPLO'\n",
+    "# Filter out and drop rows where 'Theme' is 'DUPLO'\n",
     "#df = df[df['Theme'] != 'DUPLO']\n",
     "\n",
-    "# Filter out rows with certain 'Ages' values\n",
+    "# Filter out and drop rows with certain 'Ages' values\n",
     "df = df[df['Ages'] != 'Ages_NA']\n",
     "df = df[df['Ages'] != 'NaN']\n",
     "\n",
